Transform ArrayList to LinkedList